--- a/package.json
+++ b/package.json
@@ -10,20 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.1",
+    "eslint-plugin-tsdoc": "^0.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rsuite": "^5.74.1"
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "typescript": "^5.7.2",
+    "typescript-plugin-css-modules": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "vite": "^5.4.10"
   }
 }
